<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="109dp"
            android:layout_height="31dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/plataforma5"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center"
            android:text="@string/inserir_informa_es"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="109dp"
            android:layout_height="31dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/plataforma5"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/inserir_plataforma"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="109dp"
            android:layout_height="31dp"
            android:layout_marginTop="28dp"
            android:gravity="end"
            android:text="@string/usu_rio5"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/inserir_usu_rio"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="109dp"
            android:layout_height="31dp"
            android:layout_marginTop="28dp"
            android:gravity="end"
            android:text="@string/senha8"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/inserir_senha"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="56dp"
            android:text="@string/inserir_informa_o"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#D30909"
            android:gravity="center"
            android:text="@string/excluir_informa_es_sobre8"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/digite_plataforma"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="204dp"
            android:layout_height="53dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:text="@string/excluir_info8"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="#9309C5"
            android:gravity="center"
            android:text="@string/senha32"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/digite_a_nova_senha3"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="158dp"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/mudar_senha3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName6" />

        <Button
            android:id="@+id/button5"
            android:layout_width="204dp"
            android:layout_height="53dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/mudar_senha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
